[project]
name = "data_analysis_agent"
version = "0.1.0"
description = "data_analysis_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
data_analysis_agent = "data_analysis_agent.main:run"
run_crew = "data_analysis_agent.main:run"
train = "data_analysis_agent.main:train"
replay = "data_analysis_agent.main:replay"
test = "data_analysis_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
